# today

./: .dockerignore  .gitignore  Justfile  backup copy.sql  cspell.json  docker-compose.yaml
.github/workflows/: server.yaml
desktop/: nuxt.config.ts  package-lock.json  package.json
desktop/app/: app.vue  globals.d.ts
desktop/app/assets/css/: main.css
desktop/app/components/app/: app-side-navigation.vue  app-titlebar.vue  (+8 more)
desktop/app/composables/: getWorkspaceMeta.ts  useAccentColor.ts  useAlarmSettings.ts  useDarkTheme.ts  useSecureStorageSetup.ts
desktop/app/data/: quotes.ts  routes.ts
desktop/app/layouts/: default.vue
desktop/app/pages/: index.vue
desktop/app/plugins/: apollo.ts  tauri-mock.client.ts
desktop/app/stores/: backup-settings.ts  bookmarks.ts  notes.ts  notifications.ts  recycle-bin.ts  reminder.ts  snippets.ts  sync-queue.ts  todo.ts  user-preference.ts  workspace-preferences.ts  workspaces.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs
desktop/src-tauri/src/adapters/: mod.rs  workspace_preference.rs
desktop/src-tauri/src/commands/: bookmarks.rs  mod.rs  notifications.rs  user_preference.rs  workspace_preferences.rs
desktop/src-tauri/src/state/: app.rs
docker/dev/: Dockerfile.app  Dockerfile.cli
docker/prod/: Dockerfile.app
graphql/: workspace.graphql
kernel/: Cargo.toml  index.ts
kernel/bindings/: notifications.ts  sea_orm_active_enums.ts  user_preferences.ts  workspace_preferences.ts
kernel/migration/src/: lib.rs  m20260219_214114_add_due_time_to_todo.rs  m20260314_150343_create_trigger_for_bookmarks.rs  m20260331_000000_add_workspace_flags.rs  m20260403_000000_add_workspace_security.rs  m20260501_000000_fix_sync_queue_uuid_triggers.rs  m20260518_000000_remove_email_unique_constraint_from_user_preference.rs  m20260527_110010_rename_user_preference_table_to_workspace_preference.rs  m20260527_110634_create_user_preference_table.rs  m20260527_171026_remove_email_from_workspace_preference.rs  m20260528_132342_notification.rs  m20260528_200000_add_workspace_and_is_read_to_notifications.rs
kernel/src/: boltffi.rs  enums.rs  error.rs
kernel/src/adapters/: mod.rs  notifications.rs  user_preferences.rs  workspace_preferences.rs
kernel/src/entities/mysql/: bookmark.rs  mod.rs  notifications.rs  recycle_bin.rs  sea_orm_active_enums.rs  todo.rs  workspace_preferences.rs  workspaces.rs
kernel/src/entities/postgres/: bookmark.rs  mod.rs  notifications.rs  prelude.rs  recycle_bin.rs  sea_orm_active_enums.rs  todo.rs  user_preferences.rs  workspace_preferences.rs  workspaces.rs
kernel/src/entities/sqlite/: mod.rs  notifications.rs  prelude.rs  user_preferences.rs  workspace_preferences.rs  workspaces.rs
kernel/src/repositories/: mod.rs  notifications.rs  prelude.rs  user_preference.rs  user_preferences.rs  workspace_preference.rs
scripts/: fix-ts-exports.lua  fix-ts-exports.py  kernel.just  server.just
server/: Cargo.toml
server/app/: .gitignore  nuxt.config.ts  package-lock.json  package.json
server/app/.nuxt/: components.d.ts  hints-config.mjs  imports.d.ts  nitro.json  nuxt.d.ts  nuxt.json  nuxt.node.d.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.server.json  tsconfig.shared.json  ui-image-component.ts  ui.css
server/app/.nuxt/dev/: index.mjs  index.mjs.map
server/app/.nuxt/manifest/: latest.json
server/app/.nuxt/manifest/meta/: dev.json
server/app/.nuxt/types/: build.d.ts  components.d.ts  imports.d.ts  modules.d.ts  nitro-imports.d.ts  nitro-nuxt.d.ts  nitro-routes.d.ts  plugins.d.ts
server/app/.nuxt/ui/: accordion.ts  banner.ts  blog-post.ts  breadcrumb.ts  button.ts  calendar.ts  carousel.ts  changelog-version.ts  chat-reasoning.ts  chat-tool.ts  checkbox.ts  collapsible.ts  file-upload.ts  footer-columns.ts  input-date.ts  input-menu.ts  input-number.ts  input-tags.ts  input-time.ts  input.ts  link.ts  listbox.ts  navigation-menu.ts  page-anchors.ts  page-card.ts  page-feature.ts  page-links.ts  pin-input.ts  radio-group.ts  scroll-area.ts  select-menu.ts  select.ts  sidebar.ts  slider.ts  stepper.ts  switch.ts  table.ts  tabs.ts  textarea.ts  toast.ts  (+2 more)
server/app/app/: app.vue
server/migration/src/: lib.rs  m20260517000000_create_revoked_tokens.rs  m20260614_212029_create_invitation_table.rs
server/migration/src/sqlx/: 20260517000000_create_revoked_tokens.sql
server/nuxt-app/: nuxt.config.ts  package-lock.json  package.json
server/nuxt-app/app/: app.vue
server/nuxt-app/app/assets/css/: main.css
server/src/: query_root.rs  shutdown.rs  states.rs
server/src/adapters/: invitation.rs  jwt.rs  mod.rs  notification.rs
server/src/config/: env.rs  mod.rs
server/src/dto/: notifications.rs
server/src/entities/: invitation.rs  mod.rs  prelude.rs  revoked_tokens.rs  users.rs  workspaces.rs
server/src/errors/: app_error.rs
server/src/handlers/: auth.rs  invitation.rs  mod.rs  notification.rs
server/src/middlewares/: authenticated_request.rs  authentication_middleware.rs
server/src/mutations/: bookmark.rs  mod.rs  notes.rs  recycle_bin.rs  reminder.rs  snippets.rs  sync_queue.rs  todo.rs  user_preference.rs  workspace.rs  workspace_preference.rs
server/src/repositories/: invitation.rs  mod.rs  notification.rs  revoked_tokens.rs
server/src/routes/: auth.rs  invitation.rs  mod.rs  router.rs
server/src/services/: authentication_service.rs  helper_service.rs  invitation_service.rs  mod.rs  notification_service.rs  otp_service.rs  user_service.rs
server/src/types/: bookmark.rs  mod.rs  note.rs  recycle_bin.rs  reminder.rs  snippet.rs  todo.rs  user_preference.rs  workspace.rs  workspace_preferences.rs
uilib/: package-lock.json  package.json  vite.config.ts
uilib/assets/css/: theme.css
uilib/components/forms/: BaseButton.vue  BaseInput.vue  BaseSelect.vue
uilib/src/: index.ts
uilib/src/theme/: theme.css
(+40 files in other folders)
