[package]
name = "almond_kernel"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[features]
default = ["sqlite"]
sqlite = ["sea-orm/sqlx-sqlite"]
postgres = ["sea-orm/sqlx-postgres", "seaography", "sea-orm/seaography"]
mysql = ["sea-orm/sqlx-mysql"]
markdown2pdf = ["dep:markdown2pdf", "dirs"]
sync_engine = ["dep:graphql-ws-client", "dep:graphql_client"]

[dependencies]
argon2 = "0.5"
async-graphql = { version = "7.0.17", features = ["apollo_tracing", "raw_value", "tracing", "uuid"] }
async-trait = "0.1.89"
boltffi = { version = "0.24.1", features = ["chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = { version = "6.0.0", optional = true }
futures = "0.3.32"
graphql-ws-client = { version = "0.12.1", features = [
    "client-graphql-client",
], optional = true }
graphql_client = { version = "0.16.0", optional = true }
ironpress = { version = "1.2.1" }
log = "0.4.29"
markdown2pdf = { version = "0.2.2", optional = true }
migration = { path = "migration" }
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.13.2", features = ["json"] }
sanitizer = { version = "1.0.0", features = ["derive"] }
sea-orm = { version = "2.0.0-rc.37", features = [
    "macros",
    "mock",
    "debug-print",
    "with-uuid",
    "with-chrono",
    "runtime-tokio-rustls",
    "seaography"
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
ts-rs = { version = "12.0.1", features = ["uuid-impl", "chrono-impl", "serde-json-impl", "format"] }
uuid = { version = "1.21.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[dependencies.seaography]
version = "~2.0.0-rc.8" 
features = [
    "graphql-playground",
    "with-decimal",
    "with-chrono",
    "with-uuid",
    "with-postgres-array",
]
optional = true

[build-dependencies]
boltffi = "0.1"

[dev-dependencies]
fake = "4.4.0"
lazy_static = "1.5.0"
