[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
almond_kernel = { version = "0.1.0", path = "../../kernel", features = ["markdown2pdf"] }
base64 = "0.22"
chrono = { version = "0.4.43", features = ["serde"] }
log = "0.4"
rodio = { version = "0.19", features = ["mp3", "wav", "vorbis", "flac"] }
sanitizer = { version = "1.0.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.0", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-decorum = "1.1.1"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-stronghold = "2"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
tokio-stream = "0.1.18"
toml = "^0.8.19"
ts-rs = "10.1.0"
uuid = { version = "1", features = ["v4", "serde"] }
validator = { version = "0.19.0", features = ["derive"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[profile.dev.package.scrypt]
opt-level = 3